# examples/local-file/src/lib/api/petstore/services/stores.types.ts
@@ -1,0 +1,37 @@
+// AUTO-GENERATED BY specshot
+import { z } from "zod";
+
+
+// -- Specific Models for stores --
+export const StoreSchema = z.object({
+  id: z.string(),
+  name: z.string(),
+  address: z.string(),
+});
+export type Store = z.infer<typeof StoreSchema>;
+
+export const CreateStoreRequestSchema = z.object({
+  name: z.string(),
+  address: z.string(),
+});
+export type CreateStoreRequest = z.infer<typeof CreateStoreRequestSchema>;
+
+
+// -- Request & Response Types --
+
+
+export type StoresListStoresResponse = Store[];
+
+export type StoresCreateStorePayload = CreateStoreRequest;
+
+
+export type StoresCreateStoreResponse = Store;
+
+
+
+export type StoresGetStoreResponse = Store;
+
+
+// --- CUSTOM CODE START ---
+// Add your custom types here. Do not remove these comments.
+// --- CUSTOM CODE END ---
